# airport/src/main/java/hu/webuni/airport/web/FlightController.java
@@ -8,12 +8,14 @@ import hu.webuni.airport.mapper.FlightMapper;
 import hu.webuni.airport.model.Flight;
 import hu.webuni.airport.repository.FlightRepository;
 import hu.webuni.airport.service.FlightService;
+import hu.webuni.airport.ws.DelayMessage;
 import lombok.RequiredArgsConstructor;
 import org.springframework.core.MethodParameter;
 import org.springframework.data.querydsl.binding.QuerydslPredicate;
 import org.springframework.data.web.querydsl.QuerydslPredicateArgumentResolver;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.bind.support.WebDataBinderFactory;
@@ -21,6 +23,7 @@ import org.springframework.web.context.request.NativeWebRequest;
 import org.springframework.web.method.support.ModelAndViewContainer;
 
 import java.lang.reflect.Method;
+import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Optional;
 
@@ -33,6 +36,7 @@ public class FlightController implements FlightControllerApi {
     private final FlightMapper flightMapper;
     private final FlightRepository flightRepository;
     private final QuerydslPredicateArgumentResolver predicateResolver;
+    private final SimpMessagingTemplate messagingTemplate;
 
     @Override
     public Optional<NativeWebRequest> getRequest() {
@@ -88,4 +92,9 @@ public class FlightController implements FlightControllerApi {
             return ResponseEntity.ok().build();
         }
 
+    @Override
+    public ResponseEntity<Void> reportDelay(Long id, String delay) {
+        this.messagingTemplate.convertAndSend("/topic/delay/" + delay, new DelayMessage(Integer.parseInt(delay), OffsetDateTime.now()));
+        return ResponseEntity.ok().build();
     }
+}
